--- a/css/index.css
+++ b/css/index.css
@@ -5,91 +5,91 @@
 	font-family: "Open Sans";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('k88pr3goawt7btt32z01mxjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
+	src: local("Open Sans"), local("OpenSans"), url('font/k88pr3goawt7btt32z01mxjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
 	unicode-range: U+460-52F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
 }
 @font-face {
 	font-family: "Open Sans";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('rjgo7rytmqivp7vzi-q5urjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
+	src: local("Open Sans"), local("OpenSans"), url('font/rjgo7rytmqivp7vzi-q5urjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
 	unicode-range: U+400-45F, U+490-491, U+4B0-4B1, U+2116;
 }
 @font-face {
 	font-family: "Open Sans";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('lwcjsqkb6emdfhrevqa1krjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
+	src: local("Open Sans"), local("OpenSans"), url('font/lwcjsqkb6emdfhrevqa1krjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
 	unicode-range: U+1F00-1FFF;
 }
 @font-face {
 	font-family: "Open Sans";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('xozscpt2726on7jbcb_pahjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
+	src: local("Open Sans"), local("OpenSans"), url('font/xozscpt2726on7jbcb_pahjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
 	unicode-range: U+370-3FF;
 }
 @font-face {
 	font-family: "Open Sans";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('59zrklao5bwgqf5a9baeerjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
+	src: local("Open Sans"), local("OpenSans"), url('font/59zrklao5bwgqf5a9baeerjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
 	unicode-range: U+102-103, U+1EA0-1EF9, U+20AB;
 }
 @font-face {
 	font-family: "Open Sans";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('u-wuoqret9fueobqw7jkrrjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
+	src: local("Open Sans"), local("OpenSans"), url('font/u-wuoqret9fueobqw7jkrrjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
 	unicode-range: U+100-24F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 @font-face {
 	font-family: "Open Sans";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('cjzkeoubrn4kerxqtauh3vtxra8tvwticgirnjhmvjw.woff2') format("woff2");
+	src: local("Open Sans"), local("OpenSans"), url('font/cjzkeoubrn4kerxqtauh3vtxra8tvwticgirnjhmvjw.woff2') format("woff2");
 	unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 @font-face {
 	font-family: "Oswald";
 	font-style: normal;
 	font-weight: 300;
-	src: local("Oswald Light"), local("Oswald-Light"), url('l1coq90roy9yc7voehngdbjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
+	src: local("Oswald Light"), local("Oswald-Light"), url('font/l1coq90roy9yc7voehngdbjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
 	unicode-range: U+100-24F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 @font-face {
 	font-family: "Oswald";
 	font-style: normal;
 	font-weight: 300;
-	src: local("Oswald Light"), local("Oswald-Light"), url('hqhm7bvc_nzztui2lzqtdvtxra8tvwticgirnjhmvjw.woff2') format("woff2");
+	src: local("Oswald Light"), local("Oswald-Light"), url('font/hqhm7bvc_nzztui2lzqtdvtxra8tvwticgirnjhmvjw.woff2') format("woff2");
 	unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 @font-face {
 	font-family: "Oswald";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Oswald Regular"), local("Oswald-Regular"), url('yg0glppxxuisnkuejcx4qfeszw2xoq-xsnqo47m55da.woff2') format("woff2");
+	src: local("Oswald Regular"), local("Oswald-Regular"), url('font/yg0glppxxuisnkuejcx4qfeszw2xoq-xsnqo47m55da.woff2') format("woff2");
 	unicode-range: U+100-24F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 @font-face {
 	font-family: "Oswald";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Oswald Regular"), local("Oswald-Regular"), url('peobiv_ll25tkbpqvi_a2w.woff2') format("woff2");
+	src: local("Oswald Regular"), local("Oswald-Regular"), url('font/peobiv_ll25tkbpqvi_a2w.woff2') format("woff2");
 	unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 @font-face {
 	font-family: "Oswald";
 	font-style: normal;
 	font-weight: 700;
-	src: local("Oswald Bold"), local("Oswald-Bold"), url('di-qzxlkvqa6tuc5rksb3xjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
+	src: local("Oswald Bold"), local("Oswald-Bold"), url('font/di-qzxlkvqa6tuc5rksb3xjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
 	unicode-range: U+100-24F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 @font-face {
 	font-family: "Oswald";
 	font-style: normal;
 	font-weight: 700;
-	src: local("Oswald Bold"), local("Oswald-Bold"), url('bh7276gfdcjmjapa_dkg6vtxra8tvwticgirnjhmvjw.woff2') format("woff2");
+	src: local("Oswald Bold"), local("Oswald-Bold"), url('font/bh7276gfdcjmjapa_dkg6vtxra8tvwticgirnjhmvjw.woff2') format("woff2");
 	unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 /* ::::: http://map.norsecorp.com/css/styles.css ::::: */
@@ -100,91 +100,91 @@
 	font-family: "Open Sans";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('k88pr3goawt7btt32z01mxjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
+	src: local("Open Sans"), local("OpenSans"), url('font/k88pr3goawt7btt32z01mxjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
 	unicode-range: U+460-52F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
 }
 @font-face {
 	font-family: "Open Sans";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('rjgo7rytmqivp7vzi-q5urjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
+	src: local("Open Sans"), local("OpenSans"), url('font/rjgo7rytmqivp7vzi-q5urjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
 	unicode-range: U+400-45F, U+490-491, U+4B0-4B1, U+2116;
 }
 @font-face {
 	font-family: "Open Sans";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('lwcjsqkb6emdfhrevqa1krjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
+	src: local("Open Sans"), local("OpenSans"), url('font/lwcjsqkb6emdfhrevqa1krjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
 	unicode-range: U+1F00-1FFF;
 }
 @font-face {
 	font-family: "Open Sans";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('xozscpt2726on7jbcb_pahjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
+	src: local("Open Sans"), local("OpenSans"), url('font/xozscpt2726on7jbcb_pahjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
 	unicode-range: U+370-3FF;
 }
 @font-face {
 	font-family: "Open Sans";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('59zrklao5bwgqf5a9baeerjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
+	src: local("Open Sans"), local("OpenSans"), url('font/59zrklao5bwgqf5a9baeerjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
 	unicode-range: U+102-103, U+1EA0-1EF9, U+20AB;
 }
 @font-face {
 	font-family: "Open Sans";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('u-wuoqret9fueobqw7jkrrjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
+	src: local("Open Sans"), local("OpenSans"), url('font/u-wuoqret9fueobqw7jkrrjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
 	unicode-range: U+100-24F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 @font-face {
 	font-family: "Open Sans";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('cjzkeoubrn4kerxqtauh3vtxra8tvwticgirnjhmvjw.woff2') format("woff2");
+	src: local("Open Sans"), local("OpenSans"), url('font/cjzkeoubrn4kerxqtauh3vtxra8tvwticgirnjhmvjw.woff2') format("woff2");
 	unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 @font-face {
 	font-family: "Oswald";
 	font-style: normal;
 	font-weight: 300;
-	src: local("Oswald Light"), local("Oswald-Light"), url('l1coq90roy9yc7voehngdbjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
+	src: local("Oswald Light"), local("Oswald-Light"), url('font/l1coq90roy9yc7voehngdbjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
 	unicode-range: U+100-24F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 @font-face {
 	font-family: "Oswald";
 	font-style: normal;
 	font-weight: 300;
-	src: local("Oswald Light"), local("Oswald-Light"), url('hqhm7bvc_nzztui2lzqtdvtxra8tvwticgirnjhmvjw.woff2') format("woff2");
+	src: local("Oswald Light"), local("Oswald-Light"), url('font/hqhm7bvc_nzztui2lzqtdvtxra8tvwticgirnjhmvjw.woff2') format("woff2");
 	unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 @font-face {
 	font-family: "Oswald";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Oswald Regular"), local("Oswald-Regular"), url('yg0glppxxuisnkuejcx4qfeszw2xoq-xsnqo47m55da.woff2') format("woff2");
+	src: local("Oswald Regular"), local("Oswald-Regular"), url('font/yg0glppxxuisnkuejcx4qfeszw2xoq-xsnqo47m55da.woff2') format("woff2");
 	unicode-range: U+100-24F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 @font-face {
 	font-family: "Oswald";
 	font-style: normal;
 	font-weight: 400;
-	src: local("Oswald Regular"), local("Oswald-Regular"), url('peobiv_ll25tkbpqvi_a2w.woff2') format("woff2");
+	src: local("Oswald Regular"), local("Oswald-Regular"), url('font/peobiv_ll25tkbpqvi_a2w.woff2') format("woff2");
 	unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 @font-face {
 	font-family: "Oswald";
 	font-style: normal;
 	font-weight: 700;
-	src: local("Oswald Bold"), local("Oswald-Bold"), url('di-qzxlkvqa6tuc5rksb3xjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
+	src: local("Oswald Bold"), local("Oswald-Bold"), url('font/di-qzxlkvqa6tuc5rksb3xjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
 	unicode-range: U+100-24F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 @font-face {
 	font-family: "Oswald";
 	font-style: normal;
 	font-weight: 700;
-	src: local("Oswald Bold"), local("Oswald-Bold"), url('bh7276gfdcjmjapa_dkg6vtxra8tvwticgirnjhmvjw.woff2') format("woff2");
+	src: local("Oswald Bold"), local("Oswald-Bold"), url('font/bh7276gfdcjmjapa_dkg6vtxra8tvwticgirnjhmvjw.woff2') format("woff2");
 	unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 html { font-family: sans-serif; }
@@ -214,16 +214,16 @@ td, th { padding: 0px; }
 #infobox-marketing .infobox-circle span:nth-child(3) { padding-bottom: 10%; }
 #infobox-map-legend > div:not(.close) { display: table-cell; }
 @media screen and (min-width: 600px) and (min-height: 660px) {
-	#ui { background-color: rgba(64, 64, 64, 0.5); }
+	.ui { background-color: rgba(64, 64, 64, 0.5); }
 	#chevron-container { top: 40px; right: 40px; visibility: hidden; }
 	#controls { top: 2px; }
-	#ui, #infobox-map-legend {  }
+	.ui, #infobox-map-legend {  }
 }
 @media screen and (min-width: 600px) and (max-height: 659px) and (min-height: 600px) {
 	.nav-container button { height: 10%; font-size: 11px; line-height: 5px; }
 }
 @media screen and (max-width: 599px), screen and (max-height: 599px) {
-	#ui { display: none; }
+	.ui { display: none; }
 	#chevron-container svg > g:not(#infobutton-container) { display: none; }
 	#controls {  }
 	#chevron-container { right: 0px; }
@@ -241,18 +241,18 @@ html, body { width: 100%; height: 100%; }
 body, #map { margin: 0px; padding: 0px; background-color: rgb(0, 0, 0); font-size: 0.7vw; overflow: hidden; }
 #map { position: absolute; width: 100%; height: 100%; top: 0px; left: 0px; }
 #map canvas { position: absolute; }
-#ui { height: 38%; max-height: 340px; }
+.ui { height: 30%; max-height: 340px; }
 #ui-content { opacity: 0.7; height: 100%; }
-#ui, #infobox { overflow: hidden; position: absolute; bottom: 0%; left: 0%; width: 100%; font-family: "Oswald"; font-weight: 300; }
-#ui #ui-content { width: calc(100% - 220px); display: inline-block; }
-#ui #ui-controls { width: 200px; height: 100%; margin-left: 10px; margin-right: 10px; float: right; display: inline-block; }
+.ui, #infobox { overflow: hidden; position: absolute; bottom: 0%; left: 0%; width: 100%; font-family: "Oswald"; font-weight: 300; }
+.ui #ui-content { width: calc(100% - 220px); display: inline-block; }
+.ui #ui-controls { width: 200px; height: 100%; margin-left: 10px; margin-right: 10px; float: right; display: inline-block; }
 
-#ui .module { float: left; height: 100%; margin-right: 1%; color: rgb(75, 255, 255); opacity: 1; }
-#ui .module:last-child { margin-right: 0%; margin-left: 1%; }
-#ui .title { position: relative; background-color: rgba(0, 206, 209, 0.1); background-image: url('undefined'); height: 51px; font-family: "Oswald"; font-weight: 300; padding: 10px 0px 10px 10px; font-size: 1.3vw; }
+.ui .module { float: left; height: 100%; margin-right: 1%; color: rgb(75, 255, 255); opacity: 1; }
+.ui .module:last-child { margin-right: 0%; margin-left: 1%; }
+.ui .title { position: relative; background-color: rgba(0, 206, 209, 0.1); background-image: url('font/undefined'); height: 31px; font-family: "Oswald"; font-weight: 300; padding: 0px 0px 10px 10px; font-size: 1.3vw; }
 .attack-table { height: calc(100% - 51px); }
 .attack-table tbody { height: 100%; }
-.attack-table tbody tr { height: 10%; }
+.attack-table tbody tr { height: 8%; }
 #ui-datatable-service { background-color: rgba(255, 255, 255, 0.1); }
 #ui-datatable-events { background-color: rgba(75, 255, 255, 0.1); }
 span { display: block; }
