--- a/css/index.css
+++ b/css/index.css
@@ -1,197 +1,9 @@
-/**
- * @author hujiulong / http://hujiulong.com/
- */
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('font/k88pr3goawt7btt32z01mxjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
- unicode-range: U+460-52F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
-}
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('font/rjgo7rytmqivp7vzi-q5urjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
- unicode-range: U+400-45F, U+490-491, U+4B0-4B1, U+2116;
-}
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('font/lwcjsqkb6emdfhrevqa1krjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
- unicode-range: U+1F00-1FFF;
-}
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('font/xozscpt2726on7jbcb_pahjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
- unicode-range: U+370-3FF;
-}
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('font/59zrklao5bwgqf5a9baeerjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
- unicode-range: U+102-103, U+1EA0-1EF9, U+20AB;
-}
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('font/u-wuoqret9fueobqw7jkrrjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
- unicode-range: U+100-24F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('font/cjzkeoubrn4kerxqtauh3vtxra8tvwticgirnjhmvjw.woff2') format("woff2");
- unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-@font-face {
-	font-family: "Oswald";
-	font-style: normal;
-	font-weight: 300;
-	src: local("Oswald Light"), local("Oswald-Light"), url('font/l1coq90roy9yc7voehngdbjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
- unicode-range: U+100-24F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-@font-face {
-	font-family: "Oswald";
-	font-style: normal;
-	font-weight: 300;
-	src: local("Oswald Light"), local("Oswald-Light"), url('font/hqhm7bvc_nzztui2lzqtdvtxra8tvwticgirnjhmvjw.woff2') format("woff2");
- unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-@font-face {
-	font-family: "Oswald";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Oswald Regular"), local("Oswald-Regular"), url('font/yg0glppxxuisnkuejcx4qfeszw2xoq-xsnqo47m55da.woff2') format("woff2");
- unicode-range: U+100-24F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-@font-face {
-	font-family: "Oswald";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Oswald Regular"), local("Oswald-Regular"), url('font/peobiv_ll25tkbpqvi_a2w.woff2') format("woff2");
- unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-@font-face {
-	font-family: "Oswald";
-	font-style: normal;
-	font-weight: 700;
-	src: local("Oswald Bold"), local("Oswald-Bold"), url('font/di-qzxlkvqa6tuc5rksb3xjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
- unicode-range: U+100-24F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-@font-face {
-	font-family: "Oswald";
-	font-style: normal;
-	font-weight: 700;
-	src: local("Oswald Bold"), local("Oswald-Bold"), url('font/bh7276gfdcjmjapa_dkg6vtxra8tvwticgirnjhmvjw.woff2') format("woff2");
- unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-/* ::::: http://map.norsecorp.com/css/styles.css ::::: */
-
-/* ::::: http://fonts.googleapis.com/css?family=Oswald:bold,700,400,300|Open+Sans ::::: */
-
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('font/k88pr3goawt7btt32z01mxjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
- unicode-range: U+460-52F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
-}
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('font/rjgo7rytmqivp7vzi-q5urjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
- unicode-range: U+400-45F, U+490-491, U+4B0-4B1, U+2116;
-}
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('font/lwcjsqkb6emdfhrevqa1krjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
- unicode-range: U+1F00-1FFF;
-}
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('font/xozscpt2726on7jbcb_pahjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
- unicode-range: U+370-3FF;
-}
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('font/59zrklao5bwgqf5a9baeerjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
- unicode-range: U+102-103, U+1EA0-1EF9, U+20AB;
-}
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('font/u-wuoqret9fueobqw7jkrrjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
- unicode-range: U+100-24F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Open Sans"), local("OpenSans"), url('font/cjzkeoubrn4kerxqtauh3vtxra8tvwticgirnjhmvjw.woff2') format("woff2");
- unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-@font-face {
-	font-family: "Oswald";
-	font-style: normal;
-	font-weight: 300;
-	src: local("Oswald Light"), local("Oswald-Light"), url('font/l1coq90roy9yc7voehngdbjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
- unicode-range: U+100-24F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-@font-face {
-	font-family: "Oswald";
-	font-style: normal;
-	font-weight: 300;
-	src: local("Oswald Light"), local("Oswald-Light"), url('font/hqhm7bvc_nzztui2lzqtdvtxra8tvwticgirnjhmvjw.woff2') format("woff2");
- unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-@font-face {
-	font-family: "Oswald";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Oswald Regular"), local("Oswald-Regular"), url('font/yg0glppxxuisnkuejcx4qfeszw2xoq-xsnqo47m55da.woff2') format("woff2");
- unicode-range: U+100-24F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-@font-face {
-	font-family: "Oswald";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Oswald Regular"), local("Oswald-Regular"), url('font/peobiv_ll25tkbpqvi_a2w.woff2') format("woff2");
- unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-@font-face {
-	font-family: "Oswald";
-	font-style: normal;
-	font-weight: 700;
-	src: local("Oswald Bold"), local("Oswald-Bold"), url('font/di-qzxlkvqa6tuc5rksb3xjtnkitppoi_ivcxxdnrsc.woff2') format("woff2");
- unicode-range: U+100-24F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-@font-face {
-	font-family: "Oswald";
-	font-style: normal;
-	font-weight: 700;
-	src: local("Oswald Bold"), local("Oswald-Bold"), url('font/bh7276gfdcjmjapa_dkg6vtxra8tvwticgirnjhmvjw.woff2') format("woff2");
- unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
 html {
-	font-family: sans-serif;
+	font-family: 'Microsoft YaHei',sans-serif;
 }
 body {
 	margin: 0px;
+	overflow: hidden;
 }
 a {
 	background-color: transparent;
@@ -229,40 +41,6 @@ table {
 }
 td, th {
 	padding: 0px;
-}
-
-
-@media screen and (min-width: 600px) and (min-height: 660px) {
-	.ui {
-		background-color: rgba(64, 64, 64, 0.5);
-	}
-
-	.ui, #infobox-map-legend {
-	}
-}
-@media screen and (min-width: 600px) and (max-height: 659px) and (min-height: 600px) {
-.nav-container button {
-	height: 10%;
-	font-size: 11px;
-	line-height: 5px;
-}
-}
-@media screen and (max-width: 599px), screen and (max-height: 599px) {
-	.ui {
-		display: none;
-	}
-}
-@media screen and (min-aspect-ratio: 1440/680) {
-	body {
-		font-size: 1vh;
-	}
-	.team-logo {
-		height: 1vh;
-		width: auto;
-	}
-	td {
-		line-height: 1.5vh;
-	}
 }
 
 
@@ -449,18 +227,6 @@ td {
 	font-size: 36px;
 	color:#fff;
 	display: inline;
-}
-.ui-round .snwa-logo{
-	/*float: left;*/
-	width: 49px;
-	height: 49px;
-	float: left;
-	padding: 5px;
-	margin-top: 2px;
-}
-.ui-round .snwa-logo img{
-	width: 100%;
-	height: 100%;
 }
 
 .button {
